--- a/appproject/app/src/main/AndroidManifest.xml
+++ b/appproject/app/src/main/AndroidManifest.xml
@@ -3,9 +3,6 @@
     package="com.yimukeji.yuelaoge">
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
@@ -46,6 +43,10 @@
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.UserDetailActivity"
+            android:label="@string/title_detail"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.MyInfoActivity"
             android:label="@string/title_detail"
             android:screenOrientation="portrait"></activity>
 
